- fixing ctrl a / select all bug where the highlighter would stop working - fixed highlighting divs between two textNodes (filtering out non text-nodes) - redid drawRanges to allow for multiple ranges to be entered (needed bc of filtering returning several ranges) - drawRanges now combines rects on the same line to one big rect to avoid links etc. getting their own rects and avoid overlaps / weird cutt-ins

--- a/content.css
+++ b/content.css
@@ -23,7 +23,7 @@
   /* padding: 0 2px; */
   pointer-events: var(--highlights-selectable, none);
   z-index: 0;
-  mix-blend-mode: multiply;
+  /* mix-blend-mode: multiply; */
   opacity: 0.75;
   user-select: none;
 }
